--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -9,5 +9,6 @@
 // Pages
 @import "./pages/home";
 @import "./pages/shop";
+@import "./pages/product-details";
 @import "./pages/cart";
 @import "./pages/login";
