--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -20,3 +20,26 @@
     background-position: 100% 0;
   }
 }
+
+@mixin secondaryBtn() {
+  padding: 10px;
+  min-width: 49px;
+  height: 49px;
+  border: 0px;
+  border-radius: 20px;
+  background-image: linear-gradient(130deg, #07b3f9 0%, #62c9f2 100%);
+  background-size: 200%;
+  color: #fff;
+  font-size: 1.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+  &:active {
+    transform: scale(0.8);
+  }
+  &:hover {
+    background-position: 100% 0;
+  }
+}
