--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -10,5 +10,6 @@
 @import "./pages/home";
 @import "./pages/shop";
 @import "./pages/product-details";
+@import "./pages/not-found";
 @import "./pages/cart";
 @import "./pages/login";
