--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -9,9 +9,20 @@
       height: 100vh;
       align-items: center;
       justify-content: center;
+      flex-direction: column;
+      text-align: center;
+      gap: 30px;
       h1 {
         font-size: 50px;
         font-weight: bold;
+      }
+      p {
+        width: 80%;
+        font-size: 20px;
+        span {
+          font-weight: bold;
+          font-style: italic;
+        }
       }
     }
   }
